[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/settings.gd" type="Script" id=1]
[ext_resource path="res://sprites/white.png" type="Texture" id=2]
[ext_resource path="res://fonts/imported/DroidSans32.fnt" type="BitmapFont" id=3]
[ext_resource path="res://sprites/ui/btn_custom.png" type="Texture" id=4]
[ext_resource path="res://sprites/ui/btn_custom_p.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/btn_custom_h.png" type="Texture" id=6]

[sub_resource type="CanvasItemShader" id=1]

_code = { "fragment":"//Source: https://github.com/mattdesl/lwjgl-basics/wiki/ShaderLesson3\n\nuniform color bgColor = color(0.3, 0.3, 0.3, 1);\nuniform color vignetteColor = color(0.3, 0.3, 0.3, 1);\n\n//RADIUS of our vignette, where 0.5 results in a circle fitting the screen\nuniform float RADIUS = 0.75;\n\n//softness of our vignette, between 0.0 and 1.0\nuniform float SOFTNESS = 0.45;\n\n//determine the vector length of the center position\nfloat len = 1.0-length(UV-vec2(0.5));\n\n//use smoothstep to create a smooth vignette\nfloat vignette = smoothstep(RADIUS, RADIUS-SOFTNESS, len);\n\n//apply the vignette with 50% opacity\nvec3 texColor = bgColor.rgb;\n\nCOLOR.rgb = mix(texColor, vignetteColor.rgb, vignette);\nCOLOR.a = bgColor.a;\n", "fragment_ofs":0, "light":"", "light_ofs":0, "vertex":"", "vertex_ofs":0 }

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = SubResource( 1 )
shader/shading_mode = 0
shader_param/bgColor = Color( 0.109375, 0.109375, 0.109375, 1 )
shader_param/vignetteColor = Color( 0.503906, 0.503906, 0.503906, 1 )
shader_param/RADIUS = 0.75
shader_param/SOFTNESS = 0.8

[node name="settings" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="bgImage" type="TextureFrame" parent="."]

material/material = SubResource( 2 )
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="lblTitle" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 60.0
margin/top = 60.0
margin/right = 255.0
margin/bottom = 93.0
custom_fonts/font = ExtResource( 3 )
text = "Settings"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnReturn" type="TextureButton" parent="."]

editor/display_folded = true
anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 40.0
margin/right = 60.0
margin/bottom = 90.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
textures/hover = ExtResource( 6 )

[node name="label" type="Label" parent="btnReturn"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 50.0
text = "Return"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="cfgShowFPS" type="CheckButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 120.0
margin/right = 380.0
margin/bottom = 160.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Show FPS"
flat = false
align = 0

[node name="cfgFullscreen" type="CheckButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 170.0
margin/right = 380.0
margin/bottom = 210.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Fullscreen"
flat = false
align = 0

[node name="cfgLowProcess" type="CheckButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 220.0
margin/right = 380.0
margin/bottom = 260.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Low Process Mode"
flat = false
align = 0

[node name="cfgShadows" type="CheckButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 270.0
margin/right = 380.0
margin/bottom = 310.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Shadows"
flat = false
align = 0

[node name="cfgShadowsQuality" type="Label" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 67.0
margin/top = 320.0
margin/right = 387.0
margin/bottom = 360.0
text = "Shadows Quality"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="list" type="OptionButton" parent="cfgShadowsQuality"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 5.0
margin/right = 10.0
margin/bottom = 35.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Very Low"
flat = false
align = 0
selected = 0
items = [ "Very Low", null, false, 0, null, "Low", null, false, 1, null, "Medium", null, false, 2, null, "High", null, false, 3, null, "Very High", null, false, 4, null ]

[node name="cfgTargetFPS" type="Label" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 67.0
margin/top = 370.0
margin/right = 387.0
margin/bottom = 410.0
text = "Target FPS"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="list" type="OptionButton" parent="cfgTargetFPS"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 5.0
margin/right = 10.0
margin/bottom = 35.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "No Limit"
flat = false
align = 0
selected = 0
items = [ "No Limit", null, false, 0, null, "30", null, false, 1, null, "60", null, false, 2, null, "120", null, false, 3, null ]


